new temp dir logic